# PythonCodeValidator

./: .gitattributes  .gitignore  .readthedocs.yaml  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
.github/: CODE_OF_CONDUCT.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: 1-bug-report.md  2-feature-request.md  3-enhancement-request.md  4-question-support.md
.github/workflows/: ci.yml
docs/: json_note.md
docs/how_it_works/: 01_cli__command_line_interface__.md  02_конфигурация_приложения__appconfig__.md  03_валидатор__validator__.md  04_правило__rule__.md  05_фабрика__factory__.md  06_ast__abstract_syntax_tree__.md  07_селектор__selector__.md  08_обработчик_области_видимости__scope_handler__.md  09_ограничение__constraint__.md  index.md
docs/source/: changelog.rst  conf.py  contributing.rst  faq.rst  glossary.rst  index.rst  installation.rst
src/code_validator/: __init__.py  __main__.py  cli.py  config.py  core.py  exceptions.py  output.py
tests/: test_components.py  test_scope_handler.py  test_validator.py
tests/fixtures/: arcade_hero_game.py  basic_rules.json  debug_pep8.json  invalid_code.py  invalid_syntax.ppy  malformed.json  p01_simple_program.py  p02_forbidden_constructs.py  p03_oop_structure.py  p04_magic_numbers.py  p05_advanced_code.py  p06_api_client.py  p07_bad_api_client.py  p08_flask_app.py  p09_arcade_app.py  r01_require_structure.json  r02_forbid_constructs.json  r03_check_oop.json  r04_forbid_magic_numbers.json  r05_advanced_rules.json  r06_api_rules.json  r_advenced_arcade_.json  r_full_api_rules.json  r_full_arcade_rules.json  (+3 more)
(+32 files in other folders)
